# nanavault

./: .gitignore  README.md  package.json
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  blossom.rs  commands.rs  error.rs  lib.rs  main.rs  manifest.rs  metadata.rs  recover.rs  relay.rs  secret.rs  testutil.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  mod.rs
src-tauri/src/crypto/slip39/: feistel.rs  gf256.rs  mnemonic.rs  mod.rs  rs1024.rs  sss.rs  wordlist.rs
src/lib/: api.ts  store.svelte.ts
src/lib/components/: Avatar.svelte  BackupCode.svelte  FileChip.svelte  FlowHeader.svelte  Home.svelte  Icon.svelte  MasterPassword.svelte  NanaLogo.svelte  NsecKey.svelte  ProtectSuccess.svelte  ProtectUpload.svelte  ReassureNote.svelte  Recover.svelte  RecoverSuccess.svelte  RecoveryModePick.svelte  SealMark.svelte  SecretField.svelte  ShareGuardians.svelte  TextSecretView.svelte  Working.svelte
src/routes/: +layout.svelte  +page.svelte
