[package]
name = "nanavault"
version = "0.1.0"
description = "The NanaVault desktop application"
authors = ["Javier <nanavault@jgmontoya.com>", "Pepi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nanavault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr = { version = "0.44", features = ["nip44"] }
nostr-sdk = "0.44"
nostr-blossom = "0.44"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
getrandom = "0.2"
thiserror = "2"
hex = "0.4"
async-trait = "0.1"
zeroize = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
